# OOP3

./: CMakeLists.txt  README.md  build_and_test.bat  build_and_test.sh
code/: CMakeLists.txt  array.cpp  array.h  figure.cpp  figure.h  main.cpp  pentagon.cpp  pentagon.h  point.h  polygon_utils.cpp  polygon_utils.h  rhombus.cpp  rhombus.h  trapezoid.cpp  trapezoid.h
code/include/: figure.h  pentagon.h  point.h  rhomb.h  trapezoid.h
code/src/: figure.cpp  pentagon.cpp  point.cpp  rhomb.cpp  trapezoid.cpp
tests/: CMakeLists.txt  unit_tests.cpp
